# geolocation-agent

./: .env.example  .gitignore  README.md  ideas-for-future-improvements.md  pyproject.toml  tools-and-ideas-document.md
TRAINING_DATA/example1/: comments-on-output-trace-2.txt  correct-output.txt  output-trace-2.txt  output-trace.txt
TRAINING_DATA/example2/: comments.txt  rainbolt-example.txt
docs/: architecture.md  decisions.md  limitations.md  tools-reference.md
plans/: 001-initial-architecture.md  002-improve-geolocation-agent-pipeline.md
src/geolocation_agent/: __init__.py  __main__.py  agent.py  config.py  nodes.py  prompts.py  state.py
src/geolocation_agent/models/: __init__.py  clues.py  evidence.py  hypotheses.py
src/geolocation_agent/tools/: __init__.py  evidence_tracker.py  image_tools.py  maps_tools.py  places_tools.py  search_tools.py
tests/: conftest.py  test_agent.py  test_evidence_tracker.py  test_image_tools.py  test_live_apis.py  test_maps_tools.py  test_places_tools.py  test_search_tools.py
